--- a/foreman_bootdisk.conf
+++ b/foreman_bootdisk.conf
@@ -1,4 +1,4 @@
-HOOK_DIR=/usr/share/foreman/config/bootdis_hook
+HOOK_DIR=/usr/share/foreman/config/bootdisk_hook
 LOG_LEVEL=debug
 
 MAX_RETRY_ATTEMPTS=5
@@ -6,7 +6,11 @@ BASE_RETRY_INTERVAL=2
 
 USE_FULL_HOST_IMAGE=true
 
-BOOT_DISK_STORE=/bootdiskstore
+BOOT_DISK_STORE=/var/tmp/bootdiskstore
+
+FOREMAN_HOST=sat61.lnx.example.com
+FOREMAN_USER=bootdisk
+FOREMAN_PASSWD=1572f161-9073-4b89-a524-0644cf61194c
 
 # RHEV specific settings
 RHEV_ISO_DOMAIN_PATH=/iso_domain/3bb97d30-f626-491b-b10e-cf14eb81b150/images/11111111-1111-1111-1111-111111111111
