--- a/foreman_bootdisk.conf
+++ b/foreman_bootdisk.conf
@@ -1,17 +1,34 @@
+
+# The directory where the hook scrips live.
 HOOK_DIR=/usr/share/foreman/config/bootdisk_hook
+
+# Log level (debug, info or Error)
 LOG_LEVEL=debug
 
+# The retry attempts and interval is used to control how many times
+# we try some tasks, and the interval is used as the base for time to
+# wait before retrying a task. BASE_RETRY_INTERVAL is multiplied with
+# the number of attempt number to increase the time we wait for each
+# iteration.
 MAX_RETRY_ATTEMPTS=5
 BASE_RETRY_INTERVAL=2
 
+# Wheater to use the full foreman bootdisk,
+# if false the iPXE image will be used
 USE_FULL_HOST_IMAGE=true
 
+# The local directory where bootdisk ISO's are stored.
 BOOT_DISK_STORE=/var/tmp/bootdiskstore
 
+# Foreman hostname, username and password
 FOREMAN_HOST=sat61.lnx.example.com
 FOREMAN_USER=bootdisk
 FOREMAN_PASSWD=1572f161-9073-4b89-a524-0644cf61194c
 
-# RHEV specific settings
-RHEV_ISO_DOMAIN_PATH=/iso_domain/3bb97d30-f626-491b-b10e-cf14eb81b150/images/11111111-1111-1111-1111-111111111111
+# The oVirt/RHEV iso domain needs to be mounted on the foreman/satellite
+# server. The OVIRT_ISO_DOMAIN_PATH points the full path to the directory
+# on the NFS server where ISO files is stores.
+# e.g /nfs_mnt/<uuid>/images/<111...>
+OVIRT_ISO_DOMAIN_PATH=/iso_domain/3bb97d30-f626-491b-b10e-cf14eb81b150/images/11111111-1111-1111-1111-111111111111
+
 
